--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@clerk/nextjs": "^6.9.2",
     "@jhenbert/date-formatter": "npm:@jsr/jhenbert__date-formatter@^0.1.3",
     "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.0",
     "next": "15.1.0",
     "qs": "^6.13.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
